force-app/main/default/objects/Case/fields/Support_Team__c.field-meta.xml
<CustomField>
    <fullName>Support_Team__c</fullName>
    <label>Support Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Support</fullName>
                <default>true</default>
                <label>Customer Support</label>
            </value>
            <value>
                <fullName>Case Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>