force-app/main/default/objects/Case/fields/Surgeon_Champion__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon Champion</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>