force-app/main/default/objects/Case/fields/Surgeon_Champion_User__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Champion_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Surgeon Champion</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>