force-app/main/default/objects/Case/fields/Term_of_Agreement_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Agreement_in_Months__c</fullName>
    <label>Term of Agreement in Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
            <value>
                <fullName>Other Non-Std Request Below</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>