force-app/main/default/objects/Case/fields/Time_to_answer__c.field-meta.xml
<CustomField>
    <fullName>Time_to_answer__c</fullName>
    <defaultValue>00</defaultValue>
    <inlineHelpText>Time in minutes to answer the call</inlineHelpText>
    <label>Time to answer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>