force-app/main/default/objects/Case/fields/Total_Customer_Revenue_Annual_Growth_Opp__c.field-meta.xml
<CustomField>
    <fullName>Total_Customer_Revenue_Annual_Growth_Opp__c</fullName>
    <label>Total Customer Revenue Annual Growth Opp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>