force-app/main/default/objects/Case/fields/Total_No_of_Calls_Attended__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Calls_Attended__c</fullName>
    <label>Total No. of Calls Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>