force-app/main/default/objects/Case/fields/Track_By__c.field-meta.xml
<CustomField>
    <fullName>Track_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Track By</label>
    <length>20</length>
    <type>Text</type>
</CustomField>