force-app/main/default/objects/Case/fields/Transferred_Call_To__c.field-meta.xml
<CustomField>
    <fullName>Transferred_Call_To__c</fullName>
    <label>Transferred Call To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Help Desk</fullName>
            </value>
            <value>
                <fullName>Particular Person</fullName>
            </value>
            <value>
                <fullName>Switchboard</fullName>
            </value>
            <value>
                <fullName>Person/Department</fullName>
            </value>
            <value>
                <fullName>Axis Med Tech</fullName>
            </value>
            <value>
                <fullName>Regulatory</fullName>
            </value>
            <value>
                <fullName>Scourcing</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>GCO</fullName>
            </value>
            <value>
                <fullName>GTPC</fullName>
            </value>
            <value>
                <fullName>Commerical</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Medical Education</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Technical Support</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Rep</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Repairs</fullName>
            </value>
            <value>
                <fullName>Accounts Payable/Accounts Receivable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>