force-app/main/default/objects/Case/fields/Typ_of_Material__c.field-meta.xml
<CustomField>
    <fullName>Typ_of_Material__c</fullName>
    <description>Type of material that is affected</description>
    <inlineHelpText>Geben Sie hier die Bezeichnung der Gruppe ein, auf welche sich dir Reklamation bezieht</inlineHelpText>
    <label>Typ_of_Material</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Implantat</fullName>
            </value>
            <value>
                <fullName>Instrument</fullName>
            </value>
            <value>
                <fullName>Verpackung</fullName>
            </value>
            <value>
                <fullName>Dokumentation</fullName>
            </value>
            <value>
                <fullName>Label</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>