force-app/main/default/objects/Case/fields/Type_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Agreement__c</fullName>
    <label>Type of Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placement Agreement</fullName>
            </value>
            <value>
                <fullName>Directed Rebate Agreement</fullName>
            </value>
            <value>
                <fullName>Rental Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>