force-app/main/default/objects/Case/fields/YTDCheckbox__c.field-meta.xml
<CustomField>
    <fullName>YTDCheckbox__c</fullName>
    <formula>AND(((DATEVALUE(CreatedDate) - DATE(YEAR(DATEVALUE(CreatedDate)), 01, 01))
&lt;=
(TODAY() - DATE(YEAR( TODAY()), 01,01))),OR( If( RecordType.Name= &quot;TC Export&quot;, true, false), If( RecordType.Name= &quot;TC Import&quot;, true, false)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTDCheckbox</label>
    <type>Checkbox</type>
</CustomField>