force-app/main/default/objects/Case/fields/ZB_Account_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>ZB_Account_Segmentation__c</fullName>
    <label>ZB Account Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platinum Mine</fullName>
            </value>
            <value>
                <fullName>Gold Mine</fullName>
            </value>
            <value>
                <fullName>Silver Mine</fullName>
            </value>
            <value>
                <fullName>Bronze Mine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>