force-app/main/default/objects/Case/fields/ZB_ROSA_Pivot_Type__c.field-meta.xml
<CustomField>
    <fullName>ZB_ROSA_Pivot_Type__c</fullName>
    <label>ZB ROSA Pivot Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ROSA+</fullName>
            </value>
            <value>
                <fullName>ROSA Placement</fullName>
            </value>
            <value>
                <fullName>ROSA Rental</fullName>
            </value>
            <value>
                <fullName>ROSA DRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>