force-app/main/default/objects/Case/fields/ZB_Sales_Placement_Process__c.field-meta.xml
<CustomField>
    <fullName>ZB_Sales_Placement_Process__c</fullName>
    <label>ZB Connect CapSol Sales Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Prospect</fullName>
            </value>
            <value>
                <fullName>2. Discover</fullName>
            </value>
            <value>
                <fullName>3. Solve</fullName>
            </value>
            <value>
                <fullName>4. Execute</fullName>
            </value>
            <value>
                <fullName>5. Commit</fullName>
                <isActive>false</isActive>
                <label>5. Commit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>