force-app/main/default/objects/Case/recordTypes/Americas_Reimbursement_Hotline_Access_to_Care.recordType-meta.xml
<RecordType>
    <fullName>Americas_Reimbursement_Hotline_Access_to_Care</fullName>
    <active>true</active>
    <businessProcess>Reimbursement Hotline Support Process</businessProcess>
    <label>Americas Reimbursement Hotline- Access to Care</label>
</RecordType>