force-app/main/default/objects/Case/recordTypes/Americas_Reimbursement_Hotline_Insurance_Verification_Request.recordType-meta.xml
<RecordType>
    <fullName>Americas_Reimbursement_Hotline_Insurance_Verification_Request</fullName>
    <active>false</active>
    <businessProcess>Reimbursement Hotline Support Process</businessProcess>
    <label>Americas Reimbursement Hotline – Insurance Verification Request</label>
</RecordType>