force-app/main/default/objects/Case/recordTypes/Americas_Reimbursement_Hotline_Standard_Case.recordType-meta.xml
<RecordType>
    <fullName>Americas_Reimbursement_Hotline_Standard_Case</fullName>
    <active>true</active>
    <businessProcess>Reimbursement Hotline Support Process</businessProcess>
    <description>This is the standard record type for reimbursement hotline cases.</description>
    <label>Americas Reimbursement Hotline – Standard Case</label>
</RecordType>