force-app/main/default/objects/Case/recordTypes/Deal_Support_Request.recordType-meta.xml
<RecordType>
    <fullName>Deal_Support_Request</fullName>
    <active>true</active>
    <businessProcess>Zimmer Deal Support Request Process</businessProcess>
    <label>Deal Support Request</label>
</RecordType>