force-app/main/default/objects/Case/recordTypes/EU_Case_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>EU_Case_Record_Type</fullName>
    <active>true</active>
    <businessProcess>EU-Support Process</businessProcess>
    <label>EU-Case Record Type</label>
</RecordType>