force-app/main/default/objects/Case/recordTypes/Historical_Case.recordType-meta.xml
<RecordType>
    <fullName>Historical_Case</fullName>
    <active>true</active>
    <businessProcess>Call Center</businessProcess>
    <label>Historical Case</label>
</RecordType>