force-app/main/default/objects/Case/recordTypes/My_Mobility.recordType-meta.xml
<RecordType>
    <fullName>My_Mobility</fullName>
    <active>true</active>
    <businessProcess>mymobility</businessProcess>
    <label>mymobility</label>
</RecordType>