force-app/main/default/objects/Case/recordTypes/MyMobility_Level_2.recordType-meta.xml
<RecordType>
    <fullName>MyMobility_Level_2</fullName>
    <active>true</active>
    <businessProcess>mymobility</businessProcess>
    <label>mymobility level 2 cases</label>
</RecordType>