force-app/main/default/objects/Case/recordTypes/Persona_IQ.recordType-meta.xml
<RecordType>
    <fullName>Persona_IQ</fullName>
    <active>true</active>
    <businessProcess>Persona IQ</businessProcess>
    <label>Persona IQ</label>
</RecordType>