force-app/main/default/objects/Case/recordTypes/Personalized_Solution.recordType-meta.xml
<RecordType>
    <fullName>Personalized_Solution</fullName>
    <active>true</active>
    <businessProcess>Personalized Solutions</businessProcess>
    <label>Personalized Solutions</label>
</RecordType>