force-app/main/default/objects/Case/recordTypes/PS_PACS.recordType-meta.xml
<RecordType>
    <fullName>PS_PACS</fullName>
    <active>true</active>
    <businessProcess>PS-PACS</businessProcess>
    <description>This record type has been created for PS-PACS Cases</description>
    <label>PS-PACS</label>
</RecordType>