force-app/main/default/objects/Case/recordTypes/ROSA_Sites.recordType-meta.xml
<RecordType>
    <fullName>ROSA_Sites</fullName>
    <active>true</active>
    <businessProcess>PS-ROSA Sites</businessProcess>
    <label>PS-ROSA Sites</label>
</RecordType>