force-app/main/default/objects/Case/recordTypes/Sales_Operations.recordType-meta.xml
<RecordType>
    <fullName>Sales_Operations</fullName>
    <active>true</active>
    <businessProcess>Sales Operations</businessProcess>
    <label>Sales Operations</label>
</RecordType>