force-app/main/default/objects/Case/recordTypes/TC_Export.recordType-meta.xml
<RecordType>
    <fullName>TC_Export</fullName>
    <active>true</active>
    <businessProcess>TC Case</businessProcess>
    <label>TC Export</label>
</RecordType>