force-app/main/default/objects/Case/recordTypes/TC_Import.recordType-meta.xml
<RecordType>
    <fullName>TC_Import</fullName>
    <active>true</active>
    <businessProcess>TC Case</businessProcess>
    <label>TC Import</label>
</RecordType>