force-app/main/default/objects/Case/recordTypes/ZB_Connect_Case.recordType-meta.xml
<RecordType>
    <fullName>ZB_Connect_Case</fullName>
    <active>true</active>
    <businessProcess>ZB Connect</businessProcess>
    <label>ZB Connect Case</label>
</RecordType>