force-app/main/default/objects/Case/recordTypes/ZB_Deal_Support_Placement_Request.recordType-meta.xml
<RecordType>
    <fullName>ZB_Deal_Support_Placement_Request</fullName>
    <active>true</active>
    <businessProcess>Zimmer Deal Support Request Process</businessProcess>
    <label>Capital Solutions Deal Desk</label>
</RecordType>