force-app/main/default/objects/Case/recordTypes/Zimmer_CAS_iAssist_Call_Center.recordType-meta.xml
<RecordType>
    <fullName>Zimmer_CAS_iAssist_Call_Center</fullName>
    <active>true</active>
    <businessProcess>CAS Call Center</businessProcess>
    <description>cases created for Zimmer CAS iAssist Call Center</description>
    <label>Zimmer CAS iAssist Call Center</label>
</RecordType>