force-app/main/default/objects/Case/recordTypes/Zimmer_CAS_Optical_Call_Center.recordType-meta.xml
<RecordType>
    <fullName>Zimmer_CAS_Optical_Call_Center</fullName>
    <active>true</active>
    <businessProcess>CAS Call Center</businessProcess>
    <description>cases created for Zimmer Cas Optical Call Center</description>
    <label>Zimmer CAS Optical Call Center</label>
</RecordType>