force-app/main/default/objects/Case/recordTypes/Zimmer_CAS_PSI_Call_Center.recordType-meta.xml
<RecordType>
    <fullName>Zimmer_CAS_PSI_Call_Center</fullName>
    <active>true</active>
    <businessProcess>CAS Call Center</businessProcess>
    <description>Cases Created for Zimmer CAS PSI Call Center</description>
    <label>Zimmer CAS PSI Call Center</label>
</RecordType>