force-app/main/default/objects/Case/recordTypes/Zimmer_CAS_Support_Call_Center.recordType-meta.xml
<RecordType>
    <fullName>Zimmer_CAS_Support_Call_Center</fullName>
    <active>true</active>
    <businessProcess>CAS Call Center</businessProcess>
    <description>Cases created for Zimmer CAS Support Call Center</description>
    <label>Zimmer CAS Support Call Center</label>
</RecordType>