force-app/main/default/objects/Case/validationRules/Case_Reason_Other_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Reason_Other_Field_Required</fullName>
    <active>true</active>
    <description>This validates that the Other Reason field is populated, if the Case Reason selected is Other</description>
    <errorConditionFormula>And(NOT( OR( IsPickVal($User.Region__c,&quot;EU&quot;), IsPickVal( $User.Business_Division__c,&quot;DN&quot;))),ISPICKVAL(Reason, &quot;Other&quot;),Other_Reason__c=&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Other_Reason__c</errorDisplayField>
    <errorMessage>Other reason is required as Case Reason is selected is &quot;Other&quot;</errorMessage>
</ValidationRule>