force-app/main/default/objects/Case/validationRules/mymobility_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>mymobility_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(RecordType.Id==&apos;0123b000000IKQB&apos;,
    RecordType.Id==&apos;0123b000000IKQ1&apos;),
    ISCHANGED(Status),
    TEXT(Status) == &apos;Closed&apos;,
     OR(
     Owner:Queue.Id == &apos;00G3b000003QfHS&apos;,
     Owner:Queue.Id == &apos;00G3b000003QfHR&apos;,
     ISBLANK(MyMobility_User_ID__c),
     ISPICKVAL(Category__c,&apos;&apos;),
     ISPICKVAL(Sub_Catergory__c,&apos;&apos;)
     )
)</errorConditionFormula>
    <errorMessage>Please fill the following fields before closure: mymobility User Id, Category, Sub-Category and change the Owner to Individual User</errorMessage>
</ValidationRule>