force-app/main/default/objects/Case/validationRules/Other_Subcategory_Field_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Subcategory_Field_Required</fullName>
    <active>true</active>
    <description>This validates that the Other(Sub-Category) field is populated, if the Sub-category selected is &apos;Other&apos;.</description>
    <errorConditionFormula>AND(OR(RecordType.Name = &quot;Americas Call Center – Standard Case&quot;, RecordType.Name = &quot;Customer Solutions&quot;, RecordType.Name = &quot;Zimmer CAS Optical Call Center&quot;, RecordType.Name = &quot;Zimmer CAS PSI Call Center&quot;, RecordType.Name = &quot;Zimmer CAS Support Call Center&quot;,RecordType.Name = &quot;Zimmer CAS iAssist Call Center&quot;),(ISBLANK(Other_Sub_Category__c)),OR((ISPICKVAL(Sub_Catergory__c,&quot;Other&quot;)),(ISPICKVAL(Sub_Catergory__c,&quot;Other (please describe)&quot;))))</errorConditionFormula>
    <errorMessage>Other(Sub-Category) is required as Sub-category is selected is &quot;Other&quot;.</errorMessage>
</ValidationRule>