force-app/main/default/objects/Case/validationRules/Priority_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Priority_Date_Required</fullName>
    <active>true</active>
    <description>If Specific Date is selected, priority date must be entered</description>
    <errorConditionFormula>And(NOT( OR( IsPickVal($User.Region__c,&quot;EU&quot;), IsPickVal( $User.Business_Division__c,&quot;DN&quot;))),ISPICKVAL(Priority,&quot;Specific Date&quot;), Text(Priority_Date__c) =&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Priority_Date__c</errorDisplayField>
    <errorMessage>Please enter a Specific Date for which this case must be closed</errorMessage>
</ValidationRule>