force-app/main/default/objects/Case/validationRules/PS_Close_case_error_for_new_email.validationRule-meta.xml
<ValidationRule>
    <fullName>PS_Close_case_error_for_new_email</fullName>
    <active>true</active>
    <description>PS Case cannot be close if New Email is checked.</description>
    <errorConditionFormula>AND( 
RecordType.Name == &apos;Personalized Solutions&apos;, 
ISCHANGED(Status), 
ISPICKVAL(Status, &apos;Closed&apos;), 
Indicator__c == TRUE 
)</errorConditionFormula>
    <errorMessage>Please Uncheck &apos;New Email&apos; to close the case.</errorMessage>
</ValidationRule>