force-app/main/default/objects/Case/validationRules/PS_Close_case_error_NONE_cate.validationRule-meta.xml
<ValidationRule>
    <fullName>PS_Close_case_error_NONE_cate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.Name = &quot;Personalized Solutions&quot;,
ISPICKVAL( Category__c ,&quot;--None--&quot;),
ISCHANGED(Status),
ISPICKVAL( Status,&quot;Closed&quot;)
)</errorConditionFormula>
    <errorMessage>Case cannot be closed with Category =&quot;--None--&quot;</errorMessage>
</ValidationRule>