force-app/main/default/objects/Case/validationRules/PSI_Solution_Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>PSI_Solution_Description_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND((ISBLANK(PSI_solution_desc__c)),
OR(ISPICKVAL(PSI_Solution__c,&quot;Rejection=Other (please describe below)&quot;),
ISPICKVAL(PSI_Solution__c,&quot;Other (please describe)&quot;)))</errorConditionFormula>
    <errorMessage>Please enter CAS Solution Description.</errorMessage>
</ValidationRule>