force-app/main/default/objects/Case/listViews/All_Closed_My_Mobility_Cases.listView-meta.xml
<ListView>
    <fullName>All_Closed_My_Mobility_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Category__c</columns>
    <columns>Sub_Catergory__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>OWNER_NAME</columns>
    <columns>Indicator__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.My_Mobility,Case.MyMobility_Level_2</value>
    </filters>
    <label>All Closed mymobility Cases</label>
    <sharedTo>
        <role>My_Mobility_Support_Agent</role>
        <role>My_Mobility_Support_Manager</role>
        <role>mymobility_3rd_party_support</role>
    </sharedTo>
</ListView>